--- a/src/components/TicketDisplay.css
+++ b/src/components/TicketDisplay.css
@@ -1,6 +1,6 @@
 .ticket-display {
-  width: 100%;  /* Full width of the container */
-  height: 100%; /* Full height of the container */
+  width: 100%; 
+  height: 100%; 
   display: flex;
   align-items: center;
   justify-content: center;
@@ -9,5 +9,6 @@
 
 .ticket-display h1 {
   color: rebeccapurple;
-  margin: 0; /* Remove default margin from h1 */
+  margin: 0;
+  ;
 }
